hetz/ntfy/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: default
spec:
  selector:
    app: ntfy
  ports:
    - port: 8080
      targetPort: 8080
      name: http
