hetz/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd, default-basic-auth-ntfy@kubernetescrd, default-ntfy-websockets@kubernetescrd
spec:
  tls:
    - hosts:
        - ntfy.spacemule.net
      secretName: ntfy-tls-secret
  rules:
    - host: ntfy.spacemule.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-ntfy
  namespace: default
spec:
  basicAuth:
    secret: basic-auth-ntfy
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ntfy-websockets
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
